[package]
name = "encdec-huff"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Laumxan <jlauxman@gmail.com>"]
description = "A CLI tool for encoding/decoding files utilizing Huffman's algorithm for lossless data compression."

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
thiserror = "1.0.63"
